[package]
name = "suru_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenvy = "0.15.7"
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
